# Miscellaneous

./: Cargo.toml  README.org
.custom/.dashboard_logos/: snorlax.txt
.custom/wallpapers/: README.org
HIELO/: README.org  flake.nix
HIELO/config/: options.nix
HIELO/config/lua/: plugins.lua
HIELO/config/plugins/: visuals.nix
Snormacs/: README.org  early-init.el  flake.nix  init.el
Snormacs/.custom/: Desktop-Manual.org
Snormacs/.custom/.dashboard_logos/: fpython.txt
Snormacs/.custom/nix/: example.nix
Snormacs/lib/: Cargo.toml  default.nix
Snormacs/lib/elcord-rs/src/: lib.rs
Snormacs/lib/snormacs-rs/: Cargo.toml
Snormacs/lib/snormacs-rs/src/: lib.rs
Snormacs/lib/src/: main.rs
Snormacs/lisp/: elisp.el  home.el
Snormacs/org/: Home.org  Snormacs.org
WigglerDB/: README.md
WigglerDB/src/: main.rs
WigglerDB/src/cmds/: id.rs
basic-i3wm-config/: README.md
bio-project/: Cargo.toml  README.org
bio-project/docs/: cellular_respiration.txt  photosynthesis.txt
bio-project/docs/ascii/: flower.txt  glucose.txt  mitochondria.txt  p_cycle.txt  sun.txt
bio-project/src/: main.rs
config/: default.nix  mappings.nix
config/lua/: options.lua
config/plugins/: lsp.nix  utils.nix
dynamic-paper/: README.md
passwdgen/: README.org  go.mod  passwdgen.go
sleepy-nvim/minimal/: README.org
